--- a/javascript/studentlists-package/class-goals.handlebars
+++ b/javascript/studentlists-package/class-goals.handlebars
@@ -22,7 +22,7 @@
                     </ul>
                 {{else}}
                     <div class="no-goal">
-                        {{student.nickname}} is not current working on a goal
+                        {{student.nickname}} is momenteel niet aan een doel aan het werken
                     </div>
                 {{/if}}
             </div>
