--- a/templates/profiles/class_energy_points_per_minute_graph.html
+++ b/templates/profiles/class_energy_points_per_minute_graph.html
@@ -108,7 +108,7 @@
             },
             yAxis: {
                 title: {
-                    text: 'Energy Points'
+                    text: 'Energiepunten'
                 },
                 min: 0,
                 plotLines: [{
@@ -119,7 +119,7 @@
             },
             tooltip: {
                 formatter: function() {
-                        return '<b>'+ this.point.y +' Energy Points per Minute (Rolling Average)</b>';
+                        return '<b>'+ this.point.y +' Energiepunten per minuut (Lopend gemiddelde)</b>';
                 }
             },
             legend: {
