--- a/javascript/shared-package/goalbook.handlebars
+++ b/javascript/shared-package/goalbook.handlebars
@@ -4,7 +4,7 @@
     {{/goals}}
 </div>
 <div id="goalbook-controls">
-    <a class="new-goal simple-button green" href="javascript:void(0)">New goal</a>
-    <a class="goal-history simple-button seethrough" href="{{profileRoot}}goals">Goal History</a>
+    <a class="new-goal simple-button green" href="javascript:void(0)">Nieuw doel</a>
+    <a class="goal-history simple-button seethrough" href="{{profileRoot}}goals">Doelen geschiedenis</a>
     <a class="close-button">x</a>
 </div>
