--- a/javascript/studentlists-package/class-goals.handlebars
+++ b/javascript/studentlists-package/class-goals.handlebars
@@ -8,8 +8,8 @@
                 {{#if goal.objectives}}
                 <span class="goal-count">({{goal_idx}}/{{student.goal_count}})</span>
                 <div>
-                    <div class="goal-start-time">Started {{goal.created_ago}}</div>
-                    <div class="goal-update-time">Updated {{goal.updated_ago}}</div>
+                    <div class="goal-start-time"> {{goal.created_ago}} aan gestart</div>
+                    <div class="goal-update-time"> {{goal.updated_ago}} geüpdatet</div>
                 </div>
                 {{/if}}
             </div>
