--- a/templates/viewclassprofile.html
+++ b/templates/viewclassprofile.html
@@ -154,7 +154,7 @@
   <div class="filter">
     {{ profile_macros.class_graph_link(user_data_coach, "Daily Activity Report", "classtime", selected_graph_type, list_id) }}
     <div class="filter-block">
-        <h3>Dagelijks Activiteiten Rapport <small> voor </small></h3>
+        <h3>Dagelijks activiteitenrapport <small> voor </small></h3>
         <input type="text" id="targetDatepicker" value="Vandaag">
     </div>
   </div>
@@ -169,7 +169,7 @@
           <option value="name"> Leerling </option>
           <option value="progress"> Voortgang </option>
           <option value="created"> Recentelijk aan begonnen </option>
-          <option value="updated"> Recentelijk geupdate </option>
+          <option value="updated"> Recentelijk geüpdatet </option>
         </select>
       </p>
     </div>
@@ -177,7 +177,7 @@
       <p>Toont alleen
         <input type="text" id="student-goals-search" placeholder="student or objective" class="search-input simple-input ui-corner-all blur-on-esc"></input>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-most-recent-filter" name="most-recent" />
-        <label for="goal-most-recent-filter">Recentelijk geupdate</label></span>
+        <label for="goal-most-recent-filter">Recentelijk geüpdatet</label></span>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-in-progress-filter" name="in-progress" />
         <label for="goal-in-progress-filter">Aan begonnen</label></span>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-struggling-filter" name="struggling" />
