--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -7,23 +7,27 @@
     xmlns:fb="http://www.facebook.com/2008/fbml" {{ data_require }}>
       <head prefix="og: http://ogp.me/ns#{{ App.facebook_app_namespace }}:
                         http://ogp.me/ns/apps/{{ App.facebook_app_namespace }}#" >
-        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8"/>
-        {% if include_errorception and not hide_analytics -%}
-        <script>
+                        
+                        <script>
         var _errs=["4efc1674aa8bc407591e0ad6"];(function(a,b){a.onerror=function(){_errs.push(arguments)};
         var d=function(){var a=b.createElement("script"),c=b.getElementsByTagName("script")[0];
         a.src="//d15qhc0lu1ghnk.cloudfront.net/beacon.js";a.async=!0;
         c.parentNode.insertBefore(a,c)};a.addEventListener?a.addEventListener("load",d,!1):
         a.attachEvent("onload",d)})(window,document);
         </script>
-        <script type='text/javascript'>
-(function (d, t) {
-  var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
-  bh.type = 'text/javascript';
-  bh.src = '//www.bugherd.com/sidebarv2.js?apikey=vcq6yh4qdcky76aqxkveeq';
-  s.parentNode.insertBefore(bh, s);
-  })(document, 'script');
-</script>
+       	 <script type='text/javascript'>
+		(function (d, t) {
+ 		var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
+  		bh.type = 'text/javascript';
+ 		bh.src = '//www.bugherd.com/sidebarv2.js?apikey=vcq6yh4qdcky76aqxkveeq';
+  		s.parentNode.insertBefore(bh, s);
+ 		 })(document, 'script');
+		</script> 
+		
+		
+        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8"/>
+        {% if include_errorception and not hide_analytics -%}
+        
         {%- endif %}
         <!--[if lte IE 7]><script src="/javascript/ie-warning.js"></script><script>window.onload=function(){e("/images/ie-warning/")}</script><![endif]-->
         {{ app.globals(username, is_mobile_capable, logged_in_user_profile, user_data, server_time) }}
@@ -119,7 +123,7 @@
     {{ phantom_users.login_notifications(user_data, continue) }}
     {% if user_data.is_demo %}
         <div class="demo-notification-bar" style="display:none;">
-            <span class="notification-bar-content">You are logged in to the Khan Academy Demo account, access is limited! You should <a href="/logout?continue={{ continue }}" class="simple-button orange">Remember to logout</a></span>
+            <span class="notification-bar-content">Je bent ingelogd op de demo-account. Je moet hierheen: <a href="/logout?continue={{ continue }}" class="simple-button orange">Vergeet niet uit te loggen</a></span>
             <span class="notification-bar-close">(<a href="/class_profile?coach_email=khanacademy.demo@gmail.com">demo home</a>)</span>
             <script>$(function(){ DemoNotifications.show(); });</script>
         </div>
