--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -137,7 +137,7 @@
                         <g:plusone size="medium" href="http://www.khanacademie.nl"></g:plusone>
                     </td>
                     <td class="social-action">
-                        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fkhanacademie&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
+                        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fkhanacademie&amp;send=false&amp;layout=button_count&amp;width=110&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:110px; margin-left:5px; height:21px;" allowTransparency="true"></iframe>
                     </td>
                 </tr>
                 <tr>
