--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -11,18 +11,94 @@
 {% block pagecontent %}
 <article id="contribute">
     <div class="col1 sixty-forty">
-        <h2 class="section-headline">Help mee!</h2>
+        <h2 class="section-headline">Help ook mee met de Khan academie.</h2>
 		<p>
-			We kunnen je hulp goed gebruiken. Geloof je ook in de mogelijkheden die de Khan Academie biedt? Help dan mee met:</p>
-			<ul>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/help-met-vertalen.html">het vertalen van reken- en wiskundeoefeningen</a></li>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
-				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/content-voor-taaloefeningen.html">het ontwikkelen van content voor taaloefeningen</a></li>
-			</ul>
-			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk. Buitenlandse ervaringen staan op;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
-		</p>		
-		<p>Jan Knevers deelt elke week zijn ervaringen in de klas op <a href="http://blog.khanacademie.nl" target="_blank">blog.khanacademie.nl</a>
+			Zonder de hulp van docenten en andere vrijwilligers zouden we niet zover zijn gekomen als dat we nu zijn. Zo hebben diverse mensen geholpen met het vertalen van Engelstalige oefeningen naar het Nederlands,
+			en maken docenten zelf uitlegvideo's die wij vervolgens kunnen gebruiken. Wij zijn blij met alle hulp die we krijgen. Met elk stukje feedback help je ons al. <br><br>Meer uitleg hoe je ons kunt helpen vind je hieronder: <br></p>
+	
+	<style> #accordion h3 { padding-left: 20px } </style>
+		<div id="accordion">
+		
+<h3><b>Geef feedback</b></h3>
+			<div><p>
+		Het kan voorkomen dat er op de site nog (vertaal)fouten voorkomen die wij over het hoofd hebben gezien. Ook komt het af en toe voor dat een opgave niet geheel correct werkt. 
+		Om het voor onze gebruikers makkelijk te maken om feedback te geven is er een "feedbackfunctie" in de site ingepast. Onderaan de pagina staat een balk met "Geef feedback". 
+		Door hierop te klikken kun je aangeven waar er fouten op de pagina zitten. Wij krijgen dan vervolgens vanzelf een melding hiervan en verhelpen het probleem dan zo spoedig mogelijk.<br>
+		
+	<br> Zo werkt de feedbackfunctie:<br><br>
+		<object width="425" height="350">
+  <param name="movie" value="http://www.youtube.com/v/DuAtCzfxbw4">
+  </param>
+  <param name="wmode" value="transparent">
+  </param>
+  <embed src="http://www.youtube.com/v/DuAtCzfxbw4" 
+  type="application/x-shockwave-flash" wmode="transparent" 
+  width="375" height="280">
+  </embed>
+  </object>
+		</p></div>
+		
+<h3><b>Help met het vertalen van oefeningen</b></h3>
+			<div><p>
+Wij hebben de beschikking over veel Engelstalige oefeningen, deze worden ook op onze site gebruikt. Maar alles moet wel worden vertaald van het Engels naar het Nederlands. Dit kost tijd en hier kunnen we jouw hulp goed bij gebruiken! <br><br>
+
+Op www.crowdin.net kun je ons helpen met vertalen. Hiervoor moet je de volgende stappen doorlopen:<br><br>
+
+1. Maak op <a href="http://www.crowdin.net">crowdin.net</a></li> een account aan en ga vervolgens naar <a href="http://crowdin.net/project/khan-academy/nl">ons project.</a><br>
+2. Je krijgt dan de oefeningen te zien die nog vertaald moeten worden, kies er één en klik erop. <br>
+3. Links staat nu de hele oefening, per zin ga je deze vertalen. Selecteer de zin waarmee je wilt beginnen.<br>
+4. De vertaalde zin moet worden ingevuld in het vak onder "Translation", is hij vertaald klik dan op "commit translation" en de vertaling is toegevoegd!<br><br>
+Je hoeft dus niet meteen hele lappen tekst te vertalen, ook één zin tussendoor helpt ons al enorm!<br><br>
+
+Maar PAS OP: Kijk bij suggestions voor de zekerheid of een zin niet al is vertaald door een gebruiker, want soms worden zinnen 2x hetzelfde vertaald en dat is natuurlijk zonde van de moeite. Als je denkt dat de vertaling beter kan, kan je natuurlijk wel altijd een nieuwe suggestie geven.<br><br>
+			</p></div>	
+
+
+<h3><b>Maak zelf uitlegvideo's</b></h3>
+		<div> <br>
+Naast het vertalen van de oefeningen worden er ook nieuwe Nederlandstalige uitlegfilmpjes gemaakt. Hierbij wordt de gesproken uitleg ondersteund met aantekeningen in een filmpje.<br><br>
+
+Een filmpje maken is niet moeilijk, maar je moet wel de volgende benodigdheden hebben:<br>
+1. Een computer of tablet met internettoegang<br>
+2. Een microfoon (vaak ingebouwd in een laptop)<br>
+3. YouTube account (login kan met je Google account die je ook nodig hebt voor de Khan Academie)<br>
+We werken met de website www.screencast-o-matic.com. Zij bieden gratis software waarmee je filmpjes kunt maken van wat er op je beeldscherm gebeurt. Hierbij komt je eigen gezicht ook niet in beeld, alleen je stem en de aantekeningen in het tekenprogramma Paint worden opgenomen.<br><br>
+
+Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor de Khan Academie.<br>
+
+<object width="425" height="350">
+  <param name="movie" value="http://www.youtube.com/v/q1ho0Q10wWA">
+  </param>
+  <param name="wmode" value="transparent">
+  </param>
+  <embed src="http://www.youtube.com/v/q1ho0Q10wWA" 
+  type="application/x-shockwave-flash" wmode="transparent" 
+  width="375" height="280">
+  </embed>
+</object>
+<br>
+
+ Uiteindelijk kun je zelf de gemaakte filmpjes met de YouTube URL op video.khanacademie.nl uploaden. Je moet hier inloggen met je Google- of Facebookaccount. Nu staat je video klaar om beoordeeld te worden door (andere) docenten van dit vakgebied. 
+Stuur voor de zekerheid  nog een keer de link naar info@khanacademie.nl, zodat je zeker weet dat we hem niet missen.<br>
+</div>
+
+<h3><b>Deel je ervaringen</b></h3>
+			<div>
+<p>Maak je ook gebruik van Khan academie? Deel dan je ervaringen met ons. Het maakt niet uit of je het thuis of in de klas gebruikt, wij zijn erg benieuwd naar de ervaringen van onze gebruikers. 
+Lees bijvoorbeeld de ervaringen van Jan Knuivers op <a href="http://blog.khanacademie.nl" target="_blank">blog.khanacademie.nl</a> . Hij is een docent op een basisschool in Rekken. <br><br> Wil je ook je ervaringen delen? Stuur dan een mail naar info@khanacademie.nl. Wij nemen dan contact met je op.
+<br> 
 		</p>
+
+	</div>	
+	
+	<script>
+    $(function() {
+        $( "#accordion" ).accordion({collapsible: true, active: false });
+    });
+    </script>	
+			
+					
+		
 	</div>
     
     <div class="clear"></div>
@@ -45,7 +121,7 @@
 				<a href="https://plus.google.com/b/100213809438509670719/" class="simple-button action-gradient social-button">
 					Google+
 				</a>				
-				<a href="http://www.linkedin.com/groups/Khan-Academy-Nederland-4223536?gid=4223536&trk=hb_side_g" class="simple-button action-gradient social-button">
+				<a href="http://www.linkedin.com/groups/Khan-Academie-NL-4692275?home=&gid=4692275&trk=anet_ug_hm" class="simple-button action-gradient social-button">
 					LinkedIn
 				</a>
 			</p>
