--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -164,7 +164,7 @@
             -->
     
         </div>
-        <a class="begin-button" href="/exercisedashboard">Begin met Oefenen!</a>
+        <a class="begin-button" href="/exercisedashboard">Begin met oefenen!</a>
         <br />
         
     </div>
