--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -57,7 +57,8 @@
     text-align: justify;
     max-width: 55%;
     margin-top: 20px;
-    float: left;
+    margin-left: auto;
+    margin-right: auto;
   }
   #homepage-right-col h3 {
 	  border-bottom: 1px solid black;
@@ -117,9 +118,11 @@
     </div>
     -->
     <div id="homepage-left-col">
+            <!--
         <div id="homepage-logo">
             <div id="spare-leaves"></div>
         </div>
+        -->
         <div id="social-actions">
             <table>
                 <tr>
@@ -168,6 +171,7 @@
         <br />
         
     </div>
+    <!--
     <div id="homepage-right-col">
         <h3>Laatste Nieuws</h3>
         {% for entry in rssblog %}
@@ -178,6 +182,7 @@
         </div>
         {% endfor %}
     </div>
+    -->
     <!--
     <h2>
         Nieuw <span class="ampersand">&amp;</span> Opmerkelijk
