--- a/javascript/profile-package/discussion-statistics.handlebars
+++ b/javascript/profile-package/discussion-statistics.handlebars
@@ -1,30 +1,30 @@
 <div class="discussion-stat">
     {{questions}}
     <span class="discussion-light">
-        question{{plural questions}}
+    {{{questions_string questions}}}
     </span>
 </div>
 <div class="discussion-stat">
     {{votes}}
     <span class="discussion-light">
-        vote{{plural votes}} cast
+        {{{votes_string votes}}}
     </span>
 </div>
 <div class="discussion-stat">
     {{answers}}
     <span class="discussion-light">
-        answer{{plural answers}}
+        {{{answers_string answers}}}
     </span>
 </div>
 <div class="discussion-stat">
     {{flags}}
     <span class="discussion-light">
-        flag{{plural flags}} raised
+        {{{flags_string flags}}} 
     </span>
 </div>
 <div class="discussion-stat">
     {{comments}}
     <span class="discussion-light">
-        comment{{plural comments}}
+        {{{comments_string comments}}}
     </span>
 </div>
