--- a/javascript/profile-package/profile-goals.handlebars
+++ b/javascript/profile-package/profile-goals.handlebars
@@ -31,7 +31,7 @@
     </div>
 {{else}}
     {{#if readonly }}
-        Nothing to show here!
+        Geen doelen in deze categorie!
     {{else}}
         {{>shared_goal-new}}
     {{/if}}
