Fix special characters encoding

--- a/templates/viewclassprofile.html
+++ b/templates/viewclassprofile.html
@@ -103,7 +103,7 @@
         <li>
             <a href="/class_profile/points-per-minute" class="graph-link graph-link-header header">Punten per minuut per klas</a>
             <p class="accordion-content">
-                Toont het totale aantal energiepunten per minuut als een continu geüpdatet rollend gemiddelde.
+                Toont het totale aantal energiepunten per minuut als een continu ge&uuml;pdatet rollend gemiddelde.
             </p>
         </li>
         <li>
@@ -154,7 +154,7 @@
   <div class="filter">
     {{ profile_macros.class_graph_link(user_data_coach, "Daily Activity Report", "classtime", selected_graph_type, list_id) }}
     <div class="filter-block">
-        <h3>Dagelijks activiteitenrapport <small> voor </small></h3>
+        <h3>Dagelijks Activiteiten Rapport <small> voor </small></h3>
         <input type="text" id="targetDatepicker" value="Vandaag">
     </div>
   </div>
@@ -169,7 +169,7 @@
           <option value="name"> Leerling </option>
           <option value="progress"> Voortgang </option>
           <option value="created"> Recentelijk aan begonnen </option>
-          <option value="updated"> Recentelijk geüpdatet </option>
+          <option value="updated"> Recentelijk ge&uuml;pdatet </option>
         </select>
       </p>
     </div>
@@ -177,7 +177,7 @@
       <p>Toont alleen
         <input type="text" id="student-goals-search" placeholder="student or objective" class="search-input simple-input ui-corner-all blur-on-esc"></input>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-most-recent-filter" name="most-recent" />
-        <label for="goal-most-recent-filter">Recentelijk geüpdatet</label></span>
+        <label for="goal-most-recent-filter">Recentelijk ge&uuml;pdatet</label></span>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-in-progress-filter" name="in-progress" />
         <label for="goal-in-progress-filter">Aan begonnen</label></span>
       <span class="coach-filter-block"><input type="checkbox" class="student-goals-filter-check" id="goal-struggling-filter" name="struggling" />
