--- a/javascript/studentlists-package/class-goals.handlebars
+++ b/javascript/studentlists-package/class-goals.handlebars
@@ -9,7 +9,7 @@
                 <span class="goal-count">({{goal_idx}}/{{student.goal_count}})</span>
                 <div>
                     <div class="goal-start-time"> {{goal.created_ago}} aan gestart</div>
-                    <div class="goal-update-time"> {{goal.updated_ago}} geüpdatet</div>
+                    <div class="goal-update-time"> {{goal.updated_ago}} ge&uuml;pdatet</div>
                 </div>
                 {{/if}}
             </div>
