--- a/javascript/profile-package/recent-activity-video.handlebars
+++ b/javascript/profile-package/recent-activity-video.handlebars
@@ -3,7 +3,7 @@
         <div class="clearfix">
             <span class="activity-image"></span>
             <div class="description">
-                Watched <span class="video-minutes">{{secondsToTime secondsWatched}}</span> of <a href="{{relativeUrl}}">{{videoTitle}}</a>
+                Heeft <span class="video-minutes">{{secondsToTime secondsWatched}}</span> bekeken van <a href="{{relativeUrl}}">{{videoTitle}}</a>
             </div>
         </div>
         <div class="activity-controls clearfix">
