--- a/templates/macros/coach.html
+++ b/templates/macros/coach.html
@@ -30,7 +30,7 @@
                 <img src="/images/coaches-tab-in-profile.png?1" class="vertical-shadow rounded-background"/>
             </li>
         </ol>
-        <p>Nadat leerlingen jou tot hun coach hebben gemaakt, heb je toegang tot allerlei interessante data over hun voortgang en behaalde resultatent.</p>
-        <p>Je kunt deze data bekijken via het <a href="/class_profile">klassen rapport</a>.</p>
+        <p>Nadat leerlingen jou tot hun coach hebben gemaakt, heb je toegang tot allerlei interessante data over hun voortgang en behaalde resultaten.</p>
+        <p>Je kunt deze data bekijken via het <a href="/class_profile">klassenrapport</a>.</p>
     </div>
 {%- endmacro %}
