--- a/javascript/profile-package/recent-activity-goal.handlebars
+++ b/javascript/profile-package/recent-activity-goal.handlebars
@@ -3,7 +3,7 @@
         <div class="clearfix">
             <span class="activity-image"></span>
             <div class="description">
-                Completed the goal <a href="{{profileRoot}}goals/completed">{{goal.title}}</a> after working toward it for {{goal.completedTime}}
+                Heeft het doel: <a href="{{profileRoot}}goals/completed">{{goal.title}}</a> na er {{goal.completedTime}} voor gewerkt te hebben.
             </div>
         </div>
         <div class="activity-controls clearfix">
