--- a/templates/macros/user.html
+++ b/templates/macros/user.html
@@ -64,7 +64,7 @@
         <li><a class="dropdown-link{% if user_data.is_demo %} show-demo-dialog{% endif %}" href="{{profile_root}}">Bekijk je profiel</a></li>
 
         {% if user_data.has_password() and not user_data.is_child_account() %}
-        <li><a class="dropdown-link" href="{{profile_root}}settings">Change settings</a></li>
+        <li><a class="dropdown-link" href="{{profile_root}}settings">Wijzig instellingen</a></li>
         {% endif %}
 
         <!-- Facebook's JS logout requires the page_logout ID -->
@@ -82,5 +82,5 @@
 {%- endmacro %}
 
 {% macro possible_points_badge(points, possible_points, logged_in=True) -%}
-<div class="video-energy-points"{% if logged_in %} title="{{ points }} Energy Points earned for watching this video"{% else %} title="You're earning points for watching this video. Sign in to keep them"{% endif %}><span class="video-energy-points-current">{{ points }}</span> of {{ possible_points }}</div>
+<div class="video-energy-points"{% if logged_in %} title="{{ points }} Energiepunten verdient voor het bekijken van deze video"{% else %} title="Je verdient energiepunten voor het bekijken van deze video. Login om ze te bewaren."{% endif %}><span class="video-energy-points-current">{{ points }}</span> of {{ possible_points }}</div>
 {%- endmacro %}
